--- a/teacher.html
+++ b/teacher.html
@@ -4,18 +4,19 @@
  </head>
 <body background="https://static.vecteezy.com/system/resources/previews/001/971/264/non_2x/beautiful-cherry-blossom-with-bokeh-lights-background-concept-free-vector.jpg">
 <center>
-  <h1><marquee> onmouseover=stop() onmouseout=start() scrollamount=5>
+  <h1><marquee onmouseover=stop() onmouseout=start() scrollamount=5>
   ครูในความทรงจำ...ที่ไม่ลืมเลือน 2568 </marquee></h1>
   <br><br>
-<img src"https://lh3.googleusercontent.com/hSXiAZrEDixRm0DhTQ8mJShuGrDSberyrTPyuGP9aRLoyK5xev8vGcUF09rG2NjxqgezsyVK4WPIrCkjHi-DiCO1GnOw5oF_WjzqQ7aeOVmi61n2iipQHcbD7VYrrEMPX4X1_ibzCt4vnmSXYQWsSRm1_w8Azxn_vNTxm1f1kq7x3DpLdIMkQw=w1280"
+<img src="https://lh3.googleusercontent.com/hSXiAZrEDixRm0DhTQ8mJShuGrDSberyrTPyuGP9aRLoyK5xev8vGcUF09rG2NjxqgezsyVK4WPIrCkjHi-DiCO1GnOw5oF_WjzqQ7aeOVmi61n2iipQHcbD7VYrrEMPX4X1_ibzCt4vnmSXYQWsSRm1_w8Azxn_vNTxm1f1kq7x3DpLdIMkQw=w1280"
   <br><br>
   นายสิงหา สุวรรณศรี : ขอบคุณที่สอนแนะแนวครับ
   <br><br>
   <b>บทเพลงที่มอบให้ครู</b>
   <br><br>
-  <inframe width="500" height="300" src="https://www.youtube.com/embed/J8FWjDu3kSg?si=mJKc3rv4iTOQctI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-CxTU-1mR4M?si=6UqgFVqJA-X8N82K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
   <br><br>
-  <img src"https://lh5.googleusercontent.com/xhHGqz1i-aXpd6xgJ6uFZrNBi6ua4Jvrm6HB8oTrKQhNrWs5g839R5-51QJnWHMI0jOIbAUZdH3J6tjfkX17w8Cy6k54v7fuL0UwlwIHQMjbQvJ4X0k8ZdZShMFrT2-QhkfGymWpQ62y3Xj3YBiv-QZfwvF45UUBLHhZArC71eVb-36OopwNXg=w1280"
+  <img src="https://lh5.googleusercontent.com/xhHGqz1i-aXpd6xgJ6uFZrNBi6ua4Jvrm6HB8oTrKQhNrWs5g839R5-51QJnWHMI0jOIbAUZdH3J6tjfkX17w8Cy6k54v7fuL0UwlwIHQMjbQvJ4X0k8ZdZShMFrT2-QhkfGymWpQ62y3Xj3YBiv-QZfwvF45UUBLHhZArC71eVb-36OopwNXg=w1280"
   <br><br>
   น.ส.ชนานุช ดอกประทุม : ขอบคุณที่สอนคณิตศาสตร์ครับ
   <br><br>
@@ -23,7 +24,7 @@
   <br><br>
   <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/8xwjqkcKlfU?si=xPRvi4-OtE9eyeYV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
   <br><br>
-  <img src"https://lh3.googleusercontent.com/yldvSY1OZ8F7GRvZsXBsref_U70Dm6AKR1ZAJzQ1fKldHhhdiAEGkAQX5PIFi8Og8RooO0sQ6rLXXVMu_KCbdfbxW_1WWTTzf9AujBexTgGLjNPEhnOMeMyTkvcERLSblkrsL1MZhim0NYLxi6hiNHilm3TZFD8TJItL5CVZlzWN4G5CNJvEog=w1280"
+  <img src="https://lh3.googleusercontent.com/yldvSY1OZ8F7GRvZsXBsref_U70Dm6AKR1ZAJzQ1fKldHhhdiAEGkAQX5PIFi8Og8RooO0sQ6rLXXVMu_KCbdfbxW_1WWTTzf9AujBexTgGLjNPEhnOMeMyTkvcERLSblkrsL1MZhim0NYLxi6hiNHilm3TZFD8TJItL5CVZlzWN4G5CNJvEog=w1280"
   <br><br>
   น.ส.กุนนที วงศ์ชัยอุดมโชค : ขอบคุณที่สอนศิลปะครับ
   <br><br>
@@ -31,7 +32,7 @@
   <br><br>
   <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/M7ovvi6UdcI?si=znjaHYQcAB9dzklo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
   <br><br>
-  <img src"https://lh6.googleusercontent.com/Icm11QhC_gujB64oeh2DXq-6PKlHQV3_IqjXcJRqPAqdurS94LpQ7LMa5a6-S9hUDceGPfyOXvZnX8tJ0dm8Tw3f4rdHfgg6wbY3Ff-_Een4pYADDr_odvD9Y5-UwV-Wb8hAwX_STQR7qXLwwzMiEJNfR1UnvpnfWCWv1FWU9dgTJH9fbvVwBw=w1280"
+  <img src="https://lh6.googleusercontent.com/Icm11QhC_gujB64oeh2DXq-6PKlHQV3_IqjXcJRqPAqdurS94LpQ7LMa5a6-S9hUDceGPfyOXvZnX8tJ0dm8Tw3f4rdHfgg6wbY3Ff-_Een4pYADDr_odvD9Y5-UwV-Wb8hAwX_STQR7qXLwwzMiEJNfR1UnvpnfWCWv1FWU9dgTJH9fbvVwBw=w1280"
   <br><br>  
   นางเกศสุดา นันทชัย : ขอบคุณที่สอนการงานอาชีพครับ
   <br><br>
@@ -39,7 +40,7 @@
   <br><br>
   <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/uU6zbP7Iwc0?si=4v9aLInhlMJB1XTu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
   <br><br>
-  <img src"https://lh6.googleusercontent.com/o0oLHkVwIUg3WgQEiUPScSk-XPUel7or7P7_pdz2CsnUNBhQzU52Kgv2XpomYtCeZHrMVnMj3pXfQ-4qN6bSll9yo0jCDGYNFcbxe8ES0UTcXLaruSTokCldX89WfpWm-pT7B7ABHd9hf5zJ66DUWyn6PQ9eL7O0PBecgXlb9odGGfi4zHUYmA=w1280"
+  <img src="https://lh6.googleusercontent.com/o0oLHkVwIUg3WgQEiUPScSk-XPUel7or7P7_pdz2CsnUNBhQzU52Kgv2XpomYtCeZHrMVnMj3pXfQ-4qN6bSll9yo0jCDGYNFcbxe8ES0UTcXLaruSTokCldX89WfpWm-pT7B7ABHd9hf5zJ66DUWyn6PQ9eL7O0PBecgXlb9odGGfi4zHUYmA=w1280"
   <br><br>  
   น.ส.วรรณวิภา ภู่มาก : ขอบคุณที่สอนเคมีครับ
   <br><br>
