--- a/pu.html
+++ b/pu.html
@@ -53,7 +53,7 @@
     </center>
     <br><br>
     <center>
-      <font style = "color:red"><b>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6</b></font>
+      <font style = "color:white"><b>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6</b></font>
     <br><br>      
       <img src ="pic.jpg" width=450 height=300>
     <br><br> 
