--- a/pu.html
+++ b/pu.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>สุนทรภู่ครูกวี</title>
   </head>
-  <body background="https://media.istockphoto.com/id/154923931/th/%E0%B8%A3%E0%B8%B9%E0%B8%9B%E0%B8%96%E0%B9%88%E0%B8%B2%E0%B8%A2/%E0%B8%9C%E0%B9%89%E0%B8%B2%E0%B9%84%E0%B8%AB%E0%B8%A1%E0%B9%84%E0%B8%97%E0%B8%A2%E0%B8%9E%E0%B8%B7%E0%B9%89%E0%B8%99%E0%B8%AB%E0%B8%A5%E0%B8%B1%E0%B8%87%E0%B8%A5%E0%B8%A7%E0%B8%94%E0%B8%A5%E0%B8%B2%E0%B8%A2%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%94%E0%B8%B1%E0%B9%89%E0%B8%87%E0%B9%80%E0%B8%94%E0%B8%B4%E0%B8%A1%E0%B8%82%E0%B8%AD%E0%B8%87.jpg?s=612x612&w=0&k=20&c=n85p8vd74T-PZT7fbnoZu6b8iTv8nkE9dGbqOKH4w0k=">
+  <body background="https://media.istockphoto.com/id/1162475363/th/%E0%B9%80%E0%B8%A7%E0%B8%84%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C/%E0%B9%84%E0%B8%97%E0%B8%A2%E0%B9%82%E0%B8%A5%E0%B8%95%E0%B8%B1%E0%B8%AA%E0%B8%AA%E0%B8%95%E0%B8%B2%E0%B8%A3%E0%B9%8C%E0%B8%A7%E0%B8%B4%E0%B8%99%E0%B9%80%E0%B8%97%E0%B8%88%E0%B8%A3%E0%B8%B9%E0%B8%9B%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%84%E0%B8%A3%E0%B9%89%E0%B8%A3%E0%B8%AD%E0%B8%A2%E0%B8%95%E0%B9%88%E0%B8%AD.jpg?s=612x612&w=0&k=20&c=91S0SZFkbVeZSIdgxt7u4alfxOh8x6OGblDiaguM0UA=">
     <center>
     <h1><font style="color:yellow">วันสุนทรภู่ กวีเอกของโลก </h1></font>
     <br><br>
@@ -53,7 +53,7 @@
     </center>
     <br><br>
     <center>
-      <font style = "color:white"><b>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6</b></font>
+      <font style = "color:red"><b>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6</b></font>
     <br><br>      
       <img src ="pic.jpg" width=450 height=300>
     <br><br> 
