--- a/pu.html
+++ b/pu.html
@@ -55,7 +55,7 @@
     <center>
       <font style = "color:red"><b>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6</b></font>
     <br><br>      
-      <img src ="pic.jpg" width=450 height=300>
+      <img src ="pic.jpg.jpg" width=450 height=300>
     <br><br> 
     </center>
   </body>  
