--- a/teacher.html
+++ b/teacher.html
@@ -7,48 +7,47 @@
   <h1><marquee onmouseover=stop() onmouseout=start() scrollamount=5>
   ครูในความทรงจำ...ที่ไม่ลืมเลือน 2568 </marquee></h1>
   <br><br>
-<img src="https://lh3.googleusercontent.com/hSXiAZrEDixRm0DhTQ8mJShuGrDSberyrTPyuGP9aRLoyK5xev8vGcUF09rG2NjxqgezsyVK4WPIrCkjHi-DiCO1GnOw5oF_WjzqQ7aeOVmi61n2iipQHcbD7VYrrEMPX4X1_ibzCt4vnmSXYQWsSRm1_w8Azxn_vNTxm1f1kq7x3DpLdIMkQw=w1280">
+<img src="https://lh5.googleusercontent.com/5d8Txp4M1oBhVh-nAa3Y_igmCxtphd1MDa1q9dQCEo6uYTXbYYeWvhh9WVHBX_4y_C0DPEyGGhjO2ayQvq48hOTxLDMDc0bx7j1z46zSBbSRfYxaNsoJ0uqzxOefn98EYmTWWWyZ16maRMjbcAkjUWk_gu475l00C7iDfDMo5aQ72tokHB4c-A=w1280">
   <br><br>
   นายสิงหา สุวรรณศรี : ขอบคุณที่สอนแนะแนวครับ
   <br><br>
   <b>บทเพลงที่มอบให้ครู</b>
   <br><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-CxTU-1mR4M?si=6UqgFVqJA-X8N82K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  
+<iframe width="500" height="300" src="https://www.youtube.com/embed/xGxj2iHAtzE?si=Dp6nJASDw89KqvFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <br><br>
   <img src="https://lh5.googleusercontent.com/xhHGqz1i-aXpd6xgJ6uFZrNBi6ua4Jvrm6HB8oTrKQhNrWs5g839R5-51QJnWHMI0jOIbAUZdH3J6tjfkX17w8Cy6k54v7fuL0UwlwIHQMjbQvJ4X0k8ZdZShMFrT2-QhkfGymWpQ62y3Xj3YBiv-QZfwvF45UUBLHhZArC71eVb-36OopwNXg=w1280">
   <br><br>
-  น.ส.ชนานุช ดอกประทุม : ขอบคุณที่สอนคณิตศาสตร์ครับ
-  <br><br>
-  <b>บทเพลงที่มอบให้ครู</b>
-  <br><br>
-  <inframe width="500" height="300" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/8xwjqkcKlfU?si=V6VvrD7b_o4sy-DY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>" allowfullscreen></iframe>
-  <br><br>
-  <img src="https://lh3.googleusercontent.com/yldvSY1OZ8F7GRvZsXBsref_U70Dm6AKR1ZAJzQ1fKldHhhdiAEGkAQX5PIFi8Og8RooO0sQ6rLXXVMu_KCbdfbxW_1WWTTzf9AujBexTgGLjNPEhnOMeMyTkvcERLSblkrsL1MZhim0NYLxi6hiNHilm3TZFD8TJItL5CVZlzWN4G5CNJvEog=w1280">
-  <br><br>
-  น.ส.กุนนที วงศ์ชัยอุดมโชค : ขอบคุณที่สอนศิลปะครับ
-  <br><br>
-  <b>บทเพลงที่มอบให้ครู</b>
-  <br><br>
-  <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/M7ovvi6UdcI?si=znjaHYQcAB9dzklo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
-  <br><br>
-  <img src="https://lh6.googleusercontent.com/Icm11QhC_gujB64oeh2DXq-6PKlHQV3_IqjXcJRqPAqdurS94LpQ7LMa5a6-S9hUDceGPfyOXvZnX8tJ0dm8Tw3f4rdHfgg6wbY3Ff-_Een4pYADDr_odvD9Y5-UwV-Wb8hAwX_STQR7qXLwwzMiEJNfR1UnvpnfWCWv1FWU9dgTJH9fbvVwBw=w1280">
-  <br><br>  
-  นางเกศสุดา นันทชัย : ขอบคุณที่สอนการงานอาชีพครับ
-  <br><br>
-  <b>บทเพลงที่มอบให้ครู</b>
-  <br><br>
-  <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/uU6zbP7Iwc0?si=4v9aLInhlMJB1XTu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
-  <br><br>
-  <img src="https://lh6.googleusercontent.com/o0oLHkVwIUg3WgQEiUPScSk-XPUel7or7P7_pdz2CsnUNBhQzU52Kgv2XpomYtCeZHrMVnMj3pXfQ-4qN6bSll9yo0jCDGYNFcbxe8ES0UTcXLaruSTokCldX89WfpWm-pT7B7ABHd9hf5zJ66DUWyn6PQ9eL7O0PBecgXlb9odGGfi4zHUYmA=w1280">
-  <br><br>  
-  น.ส.วรรณวิภา ภู่มาก : ขอบคุณที่สอนเคมีครับ
-  <br><br>
-  <b>บทเพลงที่มอบให้ครู</b>
-  <br><br>
-  <inframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/76ur8eNqgdw?si=BB8cHZrdGIptxk8q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
-  <br><br>
-  <img src="pic.jpg.jpg" width = 450 height = 300>
+  <img src ="https://lh6.googleusercontent.com/ffBXvo7txqxw807cl9VpanLjLZFr9-4Z2Ryvy498o7frCK0xDDEyMdtZSDfcZJ4SAR-3a-zRg3S4xWwab7CkLMMWkTeMmZxk55HnekJZh3Vce5dKT6b6FNd1S-jtvJl4ZYkwwkmRtPrrV9iEDDyXmr6bWgb4V_0EKcbR6LwjkI7SOPITLBtpZg=w1280 "width=200 height=300>
+    <br><br>
+    น.ส.จุฑามาศ ธุวะคำ : ขอบคุณที่สอนคณิตศาสตร์ ถ้าไม่สอนเป็นภาษาอังกฤษจะดีมาก
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/wXzfoeIXW5w?si=YPML_WSrnK2EqvWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <img src ="https://lh4.googleusercontent.com/alTttBFfcYfO4fKomKwLOoXRCpFJ9qTIxv6AEh5P49YhmpeFAo-UgO2fQ2tVvs5yqXU9oXXclHzmXsYAHT1bj9aH2TITaBOMKoV3K0MjgzScfHjVdSdkR2xlRV36nbZcXuNznvqNe8CAkQ5EwCCbwD0e56D2PffC_D1WRV29bxlm9T4j5qyTZA=w1280" width=200 height=300>
+    <br><br>
+    นางสาววิยดา  ไตรยวงค์ : ขอบคุณที่สอนเทคโน หน้าครูไม่ตรงปก 🥀🥀🥀
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/h_FNt31NVLI?si=evIJa_IG7CNcBfDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <img src ="https://lh5.googleusercontent.com/0P2kpHfUh0c7FzkEIykzY-dQLhRv8uAtxJUsAWp9kVvYNLq9ErKTUO5djenxEXmn7fdelK67pbrNZ8KaKk4y_JZb_7I5KPGDNmAl0LKqW-4-4qSjO8Ad9c0WSI5DgQiIcbdzUZVCDcSK-4t3GmKwxh3Fy-oDLq-gzpk-cPSZbljWumrqHFzQfw=w1280 "width=200 height=300>
+    <br><br>
+    น.ส.กุนนที วงศ์ชัยอุดมโชค : ขอบคุณที่สอนศิลปะ คาบเดียวที่ผ่อนคลาย ดั่งคาบว่างที่แสนสบาย
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/bFgkUKvlcXs?si=QTWnAb5Baj2-IPC5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <img src ="https://lh4.googleusercontent.com/v7UPlM7V8vfhdS2eYu4kI16Zmn_jgsDxvCAsNOFWVh2qX5lLlKbOXktLmek2MRXT9-PSKX1Q3uoh-HPSHFUPFCSEPv6GTozc1D7BCSRi7QI6HMEUljbDNTsRCYikwWqQKAocusTnQ1PElo4oGPsra2mgn-kC7zBwUOJ4NN26WY89M1wNjueFgw=w1280 "width=200 height=300>
+    <br><br>
+    น.ส.มัณฑนา ทับทิม : ขอบคุณที่สอนสุขศึกษา อยากให้หลับตาสมาธิ 200 นาทีแทน 2 นาที
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/Ixsm2zkXEr4?si=A2Tg0ruGLnRCZ28b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <br><br>
   <b>ด.ช.ณัฐพัชร์ พาชีรัตน์ ห้อง 203 เลขที่ 6</b>
 </center>
