--- a/teacher.html
+++ b/teacher.html
@@ -27,7 +27,7 @@
     <br><br>
     <img src ="https://lh4.googleusercontent.com/alTttBFfcYfO4fKomKwLOoXRCpFJ9qTIxv6AEh5P49YhmpeFAo-UgO2fQ2tVvs5yqXU9oXXclHzmXsYAHT1bj9aH2TITaBOMKoV3K0MjgzScfHjVdSdkR2xlRV36nbZcXuNznvqNe8CAkQ5EwCCbwD0e56D2PffC_D1WRV29bxlm9T4j5qyTZA=w1280" width=200 height=300>
     <br><br>
-    นางสาววิยดา  ไตรยวงค์ : ขอบคุณที่สอนเทคโน หน้าครูไม่ตรงปก 🥀🥀🥀
+    นางสาววิยดา  ไตรยวงค์ : ขอบคุณที่สอนเทคโน ครูเค้กสวยมากครับ 🥀🥀🥀
     <br><br>
     <b>บทเพลงที่มอบให้ครู</b>
     <br><br>
