--- a/Scout.html
+++ b/Scout.html
@@ -51,7 +51,7 @@
     width=250 height=250>
    </center>
      <br><br>
-    <h1><mark><font style="color:blue"> คำปฏิญาณของลูกเสือ     "ด้วยเกียรติของข้า ข้าสัญญาว่า" </font></mark></h1>
+    <h1><mark><font style="color:purple"> คำปฏิญาณของลูกเสือ     "ด้วยเกียรติของข้า ข้าสัญญาว่า" </font></mark></h1>
     <p>ข้อ 1 ข้าจะจงรักภักดีต่อชาติ ศาสนา และพระมหากษัตริย์</p>
     <p>ข้อ 2 ข้าจะช่วยเหลือผู้อื่นทุกเมื่อ</p>
     <p>ข้อ 3 ข้าจะปฏิบัติตามกฎของลูกเสือ</p>
