--- a/asa.html
+++ b/asa.html
@@ -67,7 +67,7 @@
       <iframe width="400" height="300" src="https://www.youtube.com/embed/uCjfx6Xv7zo?si=pNyZ96JqOO40IKlH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <br><br>
        <hr width =50% size=5 color =770088>
-        <img src ="pic.jpg" width=450 height=300>
+        <img src ="pic.jpg.jpg" width=450 height=300>
     <br><br>
     <b>ด.ช.ณัฐพัชร์ พาชีรัตน์ ห้อง 203 เลขที่ 6</b>
      </center>
