--- a/mommy.html
+++ b/mommy.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>วันแม่แห่งชาติ</title>
 <style>
-mark{background-color:green;
+mark{background-color:purpkle;
 color:#FFD6EE;}
 p{text-indent:2em;}
 .content{background-color:skyblue;
