--- a/mommy.html
+++ b/mommy.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>วันแม่แห่งชาติ</title>
 <style>
-mark{background-color:purpkle;
+mark{background-color:purple;
 color:#FFD6EE;}
 p{text-indent:2em;}
 .content{background-color:skyblue;
@@ -13,7 +13,7 @@ p{text-indent:2em;}
 
 </style>
 </head>
-<body background="https://inwfile.com/s-dh/k8tcyw.jpg">
+<body background="https://png.pngtree.com/thumb_back/fh260/background/20201226/pngtree-blue-gradient-thai-mothers-day-background-image_516197.jpg">
 <div class="content">
 <center>
          <h1><mark>วันแม่แห่งชาติ🏴‍☠️</mark></h1>
@@ -32,12 +32,12 @@ style="border:10px dotted blue;">
 </p>
 <center>
 <img src="IMG_2359.jpg" width=250 height=200
-style="border:10px double skyblue;">
+style="border:10px double purple;">
 <img src="IMG_2357.jpg" width=250 height=200
 style="border:10px dotted blue;">
 <br>
 <img src="IMG_2290.jpg" width=200 height=250
-style="border:10px double skyblue;">
+style="border:10px double purple;">
 <img src="IMG_2360.jpg" width=200 height=250
 style="border:10px dotted blue;">
 <br><br>
