--- a/king.html
+++ b/king.html
@@ -61,9 +61,9 @@ style="border: 5px solid green;">
 <p>พระองค์ทรงมีพระราชดำรัสตอบรับการขึ้นทรงราชย์ ความว่า “ตามที่ประธานสภานิติบัญญัติ แห่งชาติปฏิบัติหน้าที่ประธานรัฐสภาและ กล่าวในนามของปวงชนชาวไทย เชิญข้าพเจ้า ขึ้นครองราชย์เป็นพระมหากษัตริย์ ถ้าเป็น ไปตามพระราชประสงค์ของพระบาทสมเด็จ พระปรมินทรมหาภูมิพลอดุลยเดช บรมนาถ บพิตร และเป็นไปตามบทบัญญัติของกฎ มนเทียรบาลว่าด้วยการสืบราชสันตติวงศ์ กับรัฐธรรมนูญแห่งราชอาณาจักรไทยนั้น ข้าพเจ้าขอตอบรับเพื่อสนองพระราชปณิธาน และเพื่อประโยชน์ของประชาชนชาวไทย ทั้งปวง”
 </p>
 <center>
-<image src="https://static.thairath.co.th/media/BUCz3kW7pmsIQUex8E04V3oJLtcA1E9hoHZNu5TOY4OQSIJo0rZTK0KyQ.jpg"
+<image src="https://img.thaicdn.net/u/2021/natthida_p/covid-19/wassana12.jpg"
 onmouseover="this.src='https://static.naewna.com/uploads/news/gallery/source/190789.jpg';"
-onmouseout="this.src='https://static.thairath.co.th/media/BUCz3kW7pmsIQUex8E04V3oJLtcA1E9hoHZNu5TOY4OQSIJo0rZTK0KyQ.jpg';"
+onmouseout="this.src='https://img.thaicdn.net/u/2021/natthida_p/covid-19/wassana12.jpg';"
 width=300 height=300
 style="border: 5px double purple;">
 <br><br>
