--- a/euler.html
+++ b/euler.html
@@ -39,17 +39,43 @@ onmouseover="this.src='https://upload.wikimedia.org/wikipedia/commons/8/80/Pruss
 onmouseout="this.src='https://upload.wikimedia.org/wikipedia/commons/4/40/Russian_Academy_of_Sciences_SPB.jpg';"
 width=600 height=300
 style="border: 5px solid pink;">
-<image src="https://www.dmc.tv/images/00-iimage/591130-King-6.jpg"
-onmouseover="this.src='https://www.admissionpremium.com/class/timthumb.php?a=t&zc=1&w=600&h=314&src=/uploads/contents/201707271828099GYPphh.jpg';"
-onmouseout="this.src='https://www.dmc.tv/images/00-iimage/591130-King-6.jpg';"
+<image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAQMwTiDHX619Ep8CQKSmPt2czsYv6PLpJLw&s"
+onmouseover="this.src='https://cdn.britannica.com/65/126865-050-633DCA21/Leonhard-Euler.jpg';"
+onmouseout="this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAQMwTiDHX619Ep8CQKSmPt2czsYv6PLpJLw&s';"
 width=300 height=300
 style="border: 5px solid green;">
 <hr width=50% size=5 color=orange>
 </center>
 <br><br>
-<h1><mark>ทรงรับขึ้นทรงราชย์</mark></h1>
-<p>วันพฤหัสบดีที่ 1 ธันวาคม 2559 เวลา 19.16 น. ปวงชนชาวไทยทั้งผอง ต่างปลาบปลื้มเป็นล้นพ้น เมื่อสมเด็จ พระบรมโอรสาธิราชฯ สยามมกุฎราชกุมาร เสด็จออก ณ ห้อง UPPER MAIN CR.M (ห้อง วปร.) พระที่นั่งอัมพรสถาน พระราชวังดุสิต พระราชทานพระบรมราชวโรกาสให้ พล.อ.เปรม ติณสูลานนท์ ผู้สำเร็จราชการ แทนพระองค์ นายพรเพชร วิชิตชลชัย ประธานสภานิติบัญญัติแห่งชาติ พล.อ.ประยุทธ์ จันทร์โอชา นายกรัฐมนตรี และ นายวีระพล ตั้งสุวรรณ ประธานศาลฎีกา เข้าเฝ้าฯ เพื่อกราบบังคมทูลอัญเชิญพระรัชทายาทเสด็จ ขึ้นทรงราชย์เป็นรัชกาลที่ 10
-</p>
+<h1><mark>ผลงานด้านคณิตศาสตร์</mark></h1>
+<p>อ็อยเลอร์มีผลงานในแทบทุกสาขาของวิชาคณิตศาสตร์ เช่น เรขาคณิต แคลคูลัส ตรีโกณมิติ พีชคณิต ทฤษฎีจำนวน เป็นต้น อ็อยเลอร์ได้รับการตั้งเป็นชื่อของจำนวน 2 จำนวน อันได้แก่ จำนวนของอ็อยเลอร์ (e) ซึ่งมีค่าประมาณ 2.71828 และค่าคงตัวอ็อยเลอร์-มัสเกโรนี (γ) มีค่าประมาณ 0.57721
+
+e
+i
+φ
+=
+cos
+⁡
+φ
++
+i
+sin
+⁡
+φ
+.
+{\displaystyle e^{i\varphi }=\cos \varphi +i\sin \varphi .\,} — สูตรของอ็อยเลอร์ : สมการแสดงความสัมพันธ์ระหว่างฟังก์ชันตรีโกณมิติกับฟังก์ชันเลขชี้กำลังเชิงซ้อน
+e
+i
+π
++
+1
+=
+0
+{\displaystyle e^{i\pi }+1=0\,} — เอกลักษณ์ของอ็อยเลอร์ : เป็นกรณีหนึ่งของสูตรอ็อยเลอร์ (
+φ
+=
+π
+{\displaystyle \varphi =\pi }) โดยแสดงค่าคงตัวทางคณิตศาสตร์ถึง 5 อย่าง (ได้แก่ e, i, π, 1, 0)
 <p>พระองค์ทรงมีพระราชดำรัสตอบรับการขึ้นทรงราชย์ ความว่า “ตามที่ประธานสภานิติบัญญัติ แห่งชาติปฏิบัติหน้าที่ประธานรัฐสภาและ กล่าวในนามของปวงชนชาวไทย เชิญข้าพเจ้า ขึ้นครองราชย์เป็นพระมหากษัตริย์ ถ้าเป็น ไปตามพระราชประสงค์ของพระบาทสมเด็จ พระปรมินทรมหาภูมิพลอดุลยเดช บรมนาถ บพิตร และเป็นไปตามบทบัญญัติของกฎ มนเทียรบาลว่าด้วยการสืบราชสันตติวงศ์ กับรัฐธรรมนูญแห่งราชอาณาจักรไทยนั้น ข้าพเจ้าขอตอบรับเพื่อสนองพระราชปณิธาน และเพื่อประโยชน์ของประชาชนชาวไทย ทั้งปวง”
 </p>
 <center>
