--- a/euler.html
+++ b/euler.html
@@ -83,7 +83,7 @@ onmouseout="this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfjm
 width=300 height=300
 style="border: 5px double purple;">
 <br><br>
-<iframe width="350" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/y-vX8T2XUOY?si=jBJrvGdSKd1owjVy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/y-vX8T2XUOY?si=LWixf3ymAdCW8Jzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr width=50% size=5 color=orange>
 <br><br>
 <p>จัดทำโดย ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6 </p>
