--- a/history.html
+++ b/history.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset ='utf-8'>
-   
+   cursor:url("jatu.png"),auto; height:100vh;}
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
