--- a/history.html
+++ b/history.html
@@ -7,8 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
     <style>
       body{ font-family: "Chonburi", serif;font-weight: 700;font-style: normal; 
-      cursor:url("jatu.png"),auto;height:100vh;}
-    </style> 
+      cursor:url("jatu.jpg"),auto;height:100vh;}
+    </style>
     <style>
     mark{background:linear-gradient(pink,skyblue,orange,beige);color:black;}
     button1{background:linear-gradient(pink,skyblue);color:black;}
