--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap" rel="stylesheet">
     <style>
-      body{font-family: "Charm", cursive;
+      body{font-family: "Chonburi", cursive;
   font-weight: 400;
   font-style: normal;
       cursor:url("jatu.png"),auto;height:100vh;}
@@ -101,10 +101,10 @@ background:linear-gradient(to right, limegreen,yellow,pink,skyblue,violet,gold,r
     <center>
       <span class="blink-bg">ภาพบรรยากาศการแข่งขันฟุตบอลจตุรมิตร ครั้งที่ 31</span>
       <br><br>
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR96wh5ebKgcCzQ53fJB-n7UgzCTbQAEq1NQ&s" width=250 height=250 class="zoom">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsVEp7DhBdFLmIHSsBnUreiyiYHqMPvPF71puyor7jSK3aVhmDSd6zTZY&s=10" width=250 height=250 class="zoom">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/31st_Jaturamitr_Samakkee_opening_ceremony_on_November_15%2C_2025.jpg/250px-31st_Jaturamitr_Samakkee_opening_ceremony_on_November_15%2C_2025.jpg" width=250 height=250 class="zoom">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_3Pn5IcxfYpDPPVp3Glv3YMcXo4Uit5HhgQ&s" width=250 height=250 class="zoom">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYnMSghJ1bb8DSTDT66lYeYKm-IkQ8rm3OHg&s" width=250 height=250 class="zoom">
+      <img src="https://d1aci6px4uzzro.cloudfront.net/eyJidWNrZXQiOiJzdXBlcmFwcC1kZXYtaW1hZ2UiLCJrZXkiOiJuYy90aHVtYm5haWxzLzIwMjUvMTEvMTcvOTg0NmYwZjM5ZWVmNzBlMjg4NjBiMzM4YjRmZWNiZGNiZThmYjM2ZS82OTFiMTgzMTQzNWYxMS4wOTQ0NTAyNl9ic2taaS5qcGcvY2FyZF9jb3Zlci5qcGciLCJlZGl0cyI6eyJyZXNpemUiOnsid2lkdGgiOjUwMCwiaGVpZ2h0Ijo1MDAsImZpdCI6Imluc2lkZSJ9fX0=" width=250 height=250 class="zoom">
       <br><br><br>
       <span class="blink-bg">ภาพบรรยากาศการเชียร์และแปรอักษร</span>
       <br><br>
