--- a/history.html
+++ b/history.html
@@ -33,8 +33,8 @@ p{text-indent: 2em;}
       @keyframes glowcolors{
         0% {box-shadow: 0 0 20px hotpink;}
         25% {box-shadow: 0 0 20px skyblue;}
-        50% {box-shadow: 0 0 20px gold;}
-        75% {box-shadow: 0 0 20px violet;}
+        50% {box-shadow: 0 0 20px green;}
+        75% {box-shadow: 0 0 20px yellow;}
         100% {box-shadow: 0 0 20px red;}
       }
        .blink-bg{
