--- a/jatu.html
+++ b/jatu.html
@@ -1,43 +1,75 @@
+
+Ratchapol Srimanee
+Ratchapol Srimanee
+Ratchapol Srimanee
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>จตุรมิตร31</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset ='utf-8'>
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
- <style>
-   body{font-family: "Kodchasan", sans-serif;
-  font-weight: 700;
-  font-style: normal;}
-
-  mark{background:linear-gradient(hotpink,skyblue,#FFF0F5,beige);
-       color:black;}
-  button1{background:linear-gradient(yellow,skyblue);
-        color:blue;}
-  button2{background:linear-gradient(#228B22,hotpink);
-        color:blue;}
-  button3{background:linear-gradient(red,DarkViolet);
-        color:blue;}
-   button4{background:linear-gradient(white,Gold);
-        color:blue;}
-   header{background: linear-gradient(#98FB98,LightSkyBlue,LightPink);
-          padding: 30px;
-          text-align:center;
-          border-radius: 10px;}
- </style>
+<link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
+    <style>
+      body{ font-family: "Chonburi", serif;font-weight: 700;font-style: normal; 
+      cursor:url("jatu.png"),auto;height:100vh;}
+    </style> 
+    <style>
+    mark{background:linear-gradient(pink,skyblue,orange,beige);color:black;}
+    button1{background:linear-gradient(pink,skyblue);color:black;}
+    button2{background:linear-gradient(#6CCC8E,#E0CA70);color:black;}
+    button3{background:linear-gradient(red,white);color:black;}
+    button4{background:linear-gradient(purple,yellow);color:black;}
+      header{background:linear-gradient(white,lightpink,skyblue,white);padding :30px;text-aliign:center;border-radius:10px}
+    </style> 
+    <title>จตุรมิตร31</title>
   </head>
-  <body background="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Football_in_Bloomington%2C_Indiana%2C_1995.jpg/1200px-Football_in_Bloomington%2C_Indiana%2C_1995.jpg">
-  <header>
-  <h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย🌹 โรงเรียนเทพศิรินทร์ 🔰 โรงเรียนอัสสัมชัญ🚀 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🔥
-  </marquee></mark></h1>
-  <br>
-  <h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button1>
-  <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰 </button2>
-  <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ🚀</button3>
-  <button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🔥</button4>
-  </header></h2>
-  
-  
-  
+  <body background='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKQwiSf6moOw75Pbrbi2LkQHWzTOy_wX_0Qw&s'>
+    <header>
+    <h1><marquee><mark>
+      ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
+      โรงเรียนสวนกุหลาบวิทยาลัย🌹  โรงเรียนเทพศิรินทร์🔰    โรงเรียนอัสสัมชัญ🍗  โรงเรียนกรุงเทพคริสเตียน ✝
+    </mark></marquee></h1>
+    <br>
+    <center>
+    <h2><button1 onclick="document.location='https://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button1>
+      &nbsp;&nbsp;&nbsp;
+    <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button2>
+      &nbsp;&nbsp;&nbsp;
+    <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ🍗</button3>
+      &nbsp;&nbsp;&nbsp;
+    <button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียน ✝</button4>
+      &nbsp;&nbsp;&nbsp;
+    </h2>
+    </center></header>
+    <br><br>
+    <div id="menu" style="background:radial-gradient(white,lightpink,lightblue,white);
+    height:400px ; width:200px ; float :left;" >
+    <b>⛏สารบัญ</b><br>
+    💥  บทนำ<br>
+    💥  ประวัติ<br>
+    💥  การแข่งขัน<br>
+    💥  อันดับแชมป์<br>
+    💥  จตุรมิตรสามัคคีอาวุโส<br>
+    💥  ประเพณีชาวจตุรมิตร<br>
+    💤  ผู้จัดทำ<br>
+    </div>
+  <center> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<img src="jaturamitr (1).gif" width="700" height ="400">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSK.Jaturamitr.Official&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="700" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </center>
+    <br><br>
+    <center>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/jQntepjTA_s?si=yaDiF5YRO8WlgPr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/yVlTBvD5J3Y?si=3_ISHR_4CRUWodZ-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/qNCLZjwKZlM?si=_62uQq559ecNkiQ5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/7DeFBl1aosU?si=iI8pzCBYXaTKM8_K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/bU8lB0IbRVg?si=TW2IrEJf8cliIgJT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+
+
+      
+    </center>
   </body>
+ 
 </html>
