--- a/history.html
+++ b/history.html
@@ -6,14 +6,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 <style>
-body{font-family: "Itim", cursive;
+body{font-family: "Chonburi", cursive;
 font-weight: 400;
 font-style: normal;
-cursor:url("fucked.png") 16 16,auto;
+cursor:url("jatu.jpg") 16 16,auto;
 height: 100vh;
 margin: 0;
 }
-mark{background:linear-gradient(MediumPurple,red,hotpink,yellow);
+mark{background:linear-gradient(hotpink,skyblue);
 color:black;}
 button1{background:linear-gradient(hotpink,skyblue);
 color:black;}
