--- a/history.html
+++ b/history.html
@@ -23,7 +23,7 @@ button3{background:linear-gradient(MediumPurple,yellow);
 color:black;}
 button4{background:linear-gradient(red,white);
 color:black;}
-header{background:linear-gradient(red,Orange,Yellow,green,blue,skyblue,medium purple);
+header{background:linear-gradient(red,Orange,Yellow,green,blue,skyblue,MediumPurple);
 padding: 30px;
 text-align:center;
 border-radius: 10px;}
