--- a/history.html
+++ b/history.html
@@ -56,7 +56,7 @@ padding: 3px 6px;
 </style>
 </head>
 
-<body background="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/31st_Jaturamitr_Samakkee_opening_ceremony_on_November_15%2C_2025.jpg/1280px-31st_Jaturamitr_Samakkee_opening_ceremony_on_November_15%2C_2025.jpg">
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXfDZC8N3Dw_Csl7OItTXwBzb4SDvWmf8I9g&s">
 <header>
 <h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
 โรงเรียนสวนกุหลาบวิทยาลัย🎀💙 โรงเรียนเทพศิรินทร์💚💛 โรงเรียนกรุงเทพคริสเตียน💜💛 โรงเรียนอัสสัมชัญ💝🤍</marquee></mark></h1>
