--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
 body{font-family: "Chonburi", cursive;
 font-weight: 400;
 font-style: normal;
-cursor:url("jatu.jpg") 16 16,auto;
+cursor:url("jatu.png") 16 16,auto;
 height: 100vh;
 margin: 0;
 }
