--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap" rel="stylesheet">
     <style>
-      body{font-family: "Charm", cursive;
+      body{font-family: "Chonburi", cursive;
   font-weight: 400;
   font-style: normal;
       cursor:url("jatu.png"),auto;height:100vh;}
@@ -31,7 +31,7 @@
       .zoom:hover
     </style>
   </head>
-  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThYsu95P00qNCAFn012nDAxq_1x96WJRWSDA&s">
+  <body background="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rpMb7k7mb7GB9w6C72bbbeOXDirSSKwCoyYmwDN8w3Q1WVJrMT.jpg">
     <header>
   <h1><marquee><mark>
     ยินดีต้อนรับสู่เว็บไซต์ 4 เหล่า
