--- a/intro.html
+++ b/intro.html
@@ -17,7 +17,7 @@
       button2{background:linear-gradient(green,yellow);color:green;}
       button3{background:linear-gradient(red,white);color:red;}
       button4{background:linear-gradient(purple,gold);color:purple;}
-      header{background:linear-gradient(aquamarine,lightblue);
+      header{background:linear-gradient(้hotpink,lightblue);
             padding: 30px;
             text-align:center;
             border-radius: 10px;}
