--- a/jatu.html
+++ b/jatu.html
@@ -15,7 +15,7 @@ cursor: url("jatu.png"), auto;
 height: 100vh;
 }
 mark{
-background: linear-gradient(hotpink, skyblue, #FFE4E1, beige);
+background: linear-gradient(hotpink, skyblue, #FFE4E1, beige,red,purple);
 color: black;
 }
 button1{
@@ -35,7 +35,7 @@ background: linear-gradient(violet, gold);
 color: blue;
 }
 header{
-background: linear-gradient(#98FB98, lightpink, lightskyblue);
+background: linear-gradient(#98FB98, lightpink,red,purple, lightskyblue);
 padding: 30px;
 text-align: center;
 border-radius: 10px;
