--- a/jatu.html
+++ b/jatu.html
@@ -61,7 +61,7 @@ border-radius: 10px;
 </header></h2>
 <br><br>
 
-<div id="menu" style="background: radial-gradient(hotpink, skyblue, limegreen, yellow); height: 400px; width:200px; float: left;">
+<div id="menu" style="background: radial-gradient(hotpink, skyblue, limegreen, yellow,purple,red,gold); height: 400px; width:200px; float: left;">
 <b>🔎สารบัญ</b><br>
 💗 บทนำ <br><br>
 💗 ประวัติ <br><br>
