--- a/jatu.html
+++ b/jatu.html
@@ -72,7 +72,7 @@ border-radius: 10px;
 </div>
 
 <center>
-<img src="jatu.pdf" width="650" height="400"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <!-- 700 400 -->
+<img src="Pi7_GIF_CMP.gif" width="650" height="400"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <!-- 700 400 -->
 <!-- 340 500 --> <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSK.Jaturamitr.Official%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 </center>
 
