--- a/table.html
+++ b/table.html
@@ -88,8 +88,11 @@ height: 400px; width: 200px; float:left;">
               <h1><mark>ผลการแข่งขันจตุรมิตรสามัคคี</mark></h1>
        </center>
        <br><br>
+       <p><span class="blink-bg">การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีมีข้ึนในปี พ.ศ.2507 เป็นปีแรก โดยลำดับการแข่งขันและการเป็นเจ้าภาพดังนี้ ดังนี้</span></p>
        <table border="1" cellpadding="10" style="width:100%; background-color:#FAFAD2;">
               <tr style="text-align:center; background-color:white;">
+                     <td>ครั้งที่</td>
+                     <td>วันแข่ง</td>
                      <td>1</td>
                      <td>16 ตุลาคม - 18 พฤษจิกายน 2507</td>
                      <td style="background:linear-gradient(to right,hotpink,skyblue);">สวนกุหลาบวิทยาลัย</td> 
