--- a/table.html
+++ b/table.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ประวัติ</title>
+<title>ผลการแข่งขัน</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@ padding: 3px 6px;
 
 <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXfDZC8N3Dw_Csl7OItTXwBzb4SDvWmf8I9g&s">
 <header>
-<h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
+<h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
 โรงเรียนสวนกุหลาบวิทยาลัย🎀💙 โรงเรียนเทพศิรินทร์💚💛 โรงเรียนกรุงเทพคริสเตียน💜💛 โรงเรียนอัสสัมชัญ💝🤍</marquee></mark></h1>
 <br>
 <h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🎀💙</button>
@@ -96,7 +96,7 @@ height: 400px; width: 200px; float:left;">
                      <td>เจ้าภาพ</td>
                      <td>ผู้ชนะอันดับหนึ่ง</td>
        </tr>
-              <tr style
+              <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>16 ตุลาคม - 18 พฤษจิกายน 2507</td>
                      <td style="background:linear-gradient(to right,hotpink,skyblue);">สวนกุหลาบวิทยาลัย</td> 
@@ -288,4 +288,3 @@ height: 400px; width: 200px; float:left;">
                      <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>เทพศิรินทร์​</td>
               </tr>
-              
